Update TeleportCommand.java